--- a/Week2/exercise1.html
+++ b/Week2/exercise1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS Exercises 1</title>
-        <link rel='stylesheet' type='text/css' href='exercise1.css'
+        <link rel='stylesheet' type='text/css' href='exercise1.css'>
     </head>
     <body>
         <h1>Make me red!</h1>
@@ -10,9 +10,9 @@
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
 
         <ul>
-            <li>This is an unordered list.</li>
-            <li>All items in this list should have a yellow background.</li>
-            <li>Just the items though - not the whole list!</li>
+            <li class='c1'>This is an unordered list.</li>
+            <li class='c1'>All items in this list should have a yellow background.</li>
+            <li class='c1'>Just the items though - not the whole list!</li>
         </ul>
 
         <h2>Make me green on an orange background</h2>
@@ -20,9 +20,9 @@
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
 
         <ol>
-            <li>This is an ordered list.</li>
-            <li>All items in this list should have a teal background.</li>
-            <li>Just the items thought - not the whole list!</li>
+            <li class='c2'>This is an ordered list.</li>
+            <li class='c2'>All items in this list should have a teal background.</li>
+            <li class='c2'>Just the items thought - not the whole list!</li>
         </ol>
 
     </body>
