--- a/Week2/exercise2.html
+++ b/Week2/exercise2.html
@@ -3,12 +3,7 @@
 <html>
     <head>
         <title>CSS Exercises 1</title>
-        <style>
-            ul.nav li{
-                display: inline-block;
-                padding-right: 10px;
-            }
-        </style>
+        <link rel='stylesheet' type='text/css' href='exercise2.css'>
     </head>
     <body>
         <ul class='nav'>
@@ -36,11 +31,11 @@
             </div>
 
             <div id='about_blue' class='color-info'>
-                <h2>About blue</h2>
+                <h2 >About blue</h2>
 
                 <p>This section is all about the colour blue. This text should be black.</p>
 
-                <ul>
+                <ul class='blue'>
                     <li>This is an unordered list.</li>
                     <li>It contains some stuff about the colour blue.</li>
                     <li>The text should be blue.</li>
@@ -48,13 +43,13 @@
                 </ul>
 
             </div>
-
+            <p> </p>
             <div id='about_yellow' class='color-info'>
                 <h2>About yellow</h2>
 
-                <p>The section is all about the colour yellow. This text should be black.</p>
+                <p >The section is all about the colour yellow. This text should be black.</p>
 
-                <ul>
+                <ul class='yellow'>
                     <li>This is an unordered list.</li>
                     <li>It contains some stuff about the colour yellow.</li>
                     <li>The text should be orange.</li>
