--- a/Week3/bootstrap/GA_Dash3.html
+++ b/Week3/bootstrap/GA_Dash3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+<script src="/assets/jquery.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
 <style>
 body {
@@ -40,6 +41,20 @@ p {
   position: absolute;
   bottom: 0;
   margin: 0;
+  height: 30px;
+  transition: height .5s;
+  -webkit-transition: height .5s;
+  -moz-transition: height .5s;
+}
+small{
+  opacity: 0;
+}
+.show-description p {
+  height: 150px;
+}
+
+.show-description small {
+  opacity: 1;
 }
 
 .first{
@@ -54,6 +69,27 @@ p {
 .price {
   float: right;
 }
+@media(max-width:500px){
+  h1{
+    font-size: 50px;
+    margin-top: 20px;
+    line-height: 40px;
+  }
+  h2{
+    font-size: 20px;
+    margin: 20px 0 30px 0;
+  }
+  div{
+    margin: 20px 12px 0 12px;
+  }
+  p{
+    font-size: 20px;
+    line-height: 24px;
+  }
+  small{
+    font-size: 16px;
+  }
+}
 </style>
 
 </head>
@@ -61,19 +97,24 @@ p {
 <body>
 <h1>esha's restaurant</h1>
 <h2>a New York City eatery</h2>
-<div class="first">
+<div class="first show-description">
   <p>welsh onion soko <span class="price">$14</span><br />
   <small>Mustard sierra leone bologi kale chard beet greens black-eyed pea sorrel amaranth garlic tigernut spring onion summer purslane asparagus lentil. </small></p>
 </div>
 
-<div class="second">
+<div class="second show-description">
   <p>pastrami boudin tongue <span class="price">$22</span><br />
   <small>Tri-tip capicola kielbasa salami brisket chicken rump strip steak drumstick. Meatloaf chuck boudin ribeye pork jowl. Andouille bacon jowl meatloaf pork loin prosciutto bresaola.</small></p>
 </div>
 
-<div class="dessert">
+<div class="dessert show-description">
   <p>fruitcake marzipan pudding dragee <span class="price">$8</span><br />
   <small>Lollipop tart cotton candy jelly-o carrot cake apple pie cupcake. Jelly-o bear claw ice cream candy canes.</small></p>
 </div>
+<script>
+$('div').on('click', function(){
+  $(this).toggleClass('show-description');
+});
+</script>
 
 </body>
