--- a/Week3/bootstrap/index.html
+++ b/Week3/bootstrap/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Sam's Sarnies</title>
   <link href='bootstrap-3.3.6-dist/css/bootstrap.css' rel='stylesheet'>
+  <link rel='stylesheet' type='text/css' href='main.css'>
   <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 
 </head>
@@ -58,9 +59,9 @@
     <p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
 
     <div id='social-buttons'>
-      <button class='btn btn-lg'>Twitter</button>
-      <button class='btn btn-lg'>Facebook</button>
-      <button class='btn btn-lg'>Pinterest</button>
+      <button class='btn-twitter btn-lg '>Twitter</button>
+      <button class='btn-facebook btn-lg'>Facebook</button>
+      <button class='btn-pinterest btn-lg'>Pinterest</button>
     </div>
   </div>
 
