--- a/Website/bootstrap/index.html
+++ b/Website/bootstrap/index.html
@@ -7,70 +7,23 @@
   <meta name="viewport" content = "width=device-width, initial-scale=1.0">
 
 </head>
-
 <body>
-  <nav class = "navbar" role="navigation">
-    
-  </nav>
-  <div class="container">
-    <div class='row'>
-      <div class='col-md-8'>
-        <h1>Healthy sandwiches for your team</h1>
+  <div class = "nav">
+    <ul>
+      <li class="active"><a href="#links">Links</a></li>
+      <li class="contact"><a href="#contact">Contact Us</a></li>
+      <li class="menu"><a href="#menu">Menu</a></li>
+    </ul>
+  </div>
+
+  <div class="main">
+    <nav class = "navbar_main" role="navigation">
+      <div class="container">
+        <div style='position:absolute;z-index:0;left:0;top:44;width:100%;height:100%'>
+        <img class = "img-responsive" src='images/net.png' style='width:100%'>
+        </div>
       </div>
-      <div class='col-md-4'>
-        <img class = "img-responsive" src='images/sandwich.png'>
-      </div>
-    </div>
-  <div class='jumbotron'>
-    <form role='form'>
-      <label for="email">Find out more</label>
-      <input type="text" name="email" >
-      <button class='btn btn-success'>Send</button>
-    </form>
+    </nav>
   </div>
-  <div class='row'>
-  <div id="buzz">
-    <h2><small>The Buzz</small><br/>What are people saying?</h2>
-    <div class='col-md-4'>
-      <img class = "img-circle center-block img-responsive"  src='images/person.jpg'>
-      <blockquote><p class = "text-center">These sandwiches are the best I've ever tasted, for sure. I now eat them every day - breakfast, lunch and dinner.</p></blockquote>
-      <small >Mr Smith, Professional sandwich taster</small>
-  </div>
-  <div class='col-md-4'>
-    <div>
-      <img class = "img-circle center-block img-responsive" src='images/person.jpg'>
-      <blockquote><p class = "text-center" >My team are always far more productive after we order from Sam's. 40% more productive, in fact.</p></blockquote>
-      <small>Miss McAdam, CEO Workplace Analytics</small>
-    </div>
-  </div>
-  <div class='col-md-4'>
-    <div>
-      <img class = "img-circle center-block img-responsive" src='images/person.jpg'>
-      <blockquote><p class = "text-center">We switched to Sam's Sarnies and won our first government contract the next day. Coincidence? I think not!</p></blockquote>
-    </div>
-  </div>
-  </div>
-  </div>
-
-
-
-  <div id="mission">
-    <h2><small>Our mission</small><br />Join us in helping busy professionals eat healthily</h2>
-
-    <p class="lead">We believe that healthy workers are more productive workers.</p>
-    <p class="lead">Providing your team with a healthy lunch each day improves both motivation and morale.</p>
-    <p class="lead">We deliver healthy sandwiches, made with the best ingredients, to your workplace every day.</p>
-
-    <div id='social-buttons'>
-      <button class='btn-twitter btn-lg '>Twitter</button>
-      <button class='btn-facebook btn-lg'>Facebook</button>
-      <button class='btn-pinterest btn-lg'>Pinterest</button>
-    </div>
-  </div>
-
-</div>
 </body>
-
-
-<!-- Sandwich from: © Kosoff | <a href="http://www.dreamstime.com/">Dreamstime Stock Photos</a> & <a href="http://www.stockfreeimages.com/">Stock Free Images</a> -->
 </html>
