--- a/Website/bootstrap/index.html
+++ b/Website/bootstrap/index.html
@@ -2,38 +2,153 @@
 <html>
 <head>
   <title>Blockchain</title>
-  <link rel='stylesheet' type='text/css' href='main1.css'>
+  <link href='bootstrap-3.3.6-dist/css/bootstrap.css' rel='stylesheet'>
+  <link rel='stylesheet' type='text/css' href='main.css'>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="top_bar">
+    <br>
     <ul class = "top_nav">
-      <li class="active"><a href="#links">Links</a></li>
-      <li class="contact"><a href="#contact">Contact Us</a></li>
-      <li class="menu"><a href="#menu">Menu</a></li>
+      <li class="ico"><a href="#"><i class="fa fa-link" style="font-size:30px;color:black;"></i></a></li>
+      <li class="ico"><a href="#"><i class="fa fa-envelope" style="font-size:30px;color:black;"></i></a></li>
+      <li class="ico"><a href="#"><i class="fa fa-navicon" style="font-size:30px;color:black;"></i></a></li>
     </ul>
   </div>
   <header>
     <br>
     <div class = "nav1">
       <ul>
-        <li class="active"><a href="#blockc">Blockchain</a></li>
-        <li class="crypto"><a href="#crypto">Cryptocurrency</a></li>
-        <li class="darkside"><a href="#darkside">Darkside</a></li>
+        <li><a href="#blockc">BLOCKHAIN</a></li>
+        <li><a href="#crypto">CRYPTOCURRENCY</a></li>
+        <li><a href="#darkside">DARKSIDE</a></li>
       </ul>
     </div>
-    <br>
-    <br>
-      <h1>BLOCKCHAIN</h1>
       <div class = "social">
         <br>
-        <ul class = "soc_nav">
-          <li class="ico_facebook" target = "_blank"><a href="#">F</a></li>
-          <li class="ico_twitter" target = "_blank"><a href="#">L</a></li>
-          <li class="ico_linkedin" target = "_blank"><a href="#">X</a></li>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <ul>
+        <li class="ico"><a href="#"><i class="fa fa-facebook-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-linkedin-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-twitter-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-youtube-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
         </ul>
         <br>
         <br>
       </div>
   </header>
+
+  <h2>
+    BLOCKCHAIN TECHNOLOGY
+    <br>
+    <div class='row'>
+    <div class='col-md-5'>
+      <hr>
+    </div>
+    <div class='col-md-2'>
+    <i class="fa fa-cogs" style="font-size:40px;color:grey;"></i>
+    </div>
+    <div class='col-md-5'>
+      <hr>
+    </div>
+    </div>
+    <div class='row'>
+    <div class='col-md-4'>
+      <img src='images/applications.png' width="450" height="300" >
+    </div>
+    <div class='col-md-1'>
+    </div>
+    <div class='col-md-6'>
+      <br>
+      <p>A blockchain is a data structure that makes it possible to create a digital ledger of transactions and share it among a distributed network of computers.</p>
+      <p>It uses cryptography to allow each participant on the network to manipulate the ledger in a secure way without the need for a central authority. Once a block of data is recorded on the blockchain ledger, it is extremely difficult to change or remove.</p>
+      <p> When someone wants to add to it, participants in the network - all of which have copies of the existing blockchain - run algorithms to evaluate and verify the proposed transaction. If a majority of nodes agree that the transaction looks valid - that is, identifying information matches the blockchain's history - then the new transaction will be approved and a new block added to the chain.</p>
+    </div>
+    <div class='col-md-1'>
+    </div>
+    </div>
+    </div>
+  </h2>
+  <br>
+  <h2>
+    CRYPTOCYRRENCY
+    <br>
+    <div class='row'>
+    <div class='col-md-5'>
+      <hr>
+    </div>
+    <div class='col-md-2'>
+    <i class="fa fa-bitcoin" style="font-size:40px;color:grey;"></i>
+    </div>
+    <div class='col-md-5'>
+      <hr>
+    </div>
+    </div>
+    <div class='row'>
+      <div class='col-md-1'>
+      </div>
+      <div class='col-md-6'>
+        <br>
+        <p>A blockchain is a data structure that makes it possible to create a digital ledger of transactions and share it among a distributed network of computers.</p>
+        <p>It uses cryptography to allow each participant on the network to manipulate the ledger in a secure way without the need for a central authority. Once a block of data is recorded on the blockchain ledger, it is extremely difficult to change or remove.</p>
+        <p> When someone wants to add to it, participants in the network - all of which have copies of the existing blockchain - run algorithms to evaluate and verify the proposed transaction. If a majority of nodes agree that the transaction looks valid - that is, identifying information matches the blockchain's history - then the new transaction will be approved and a new block added to the chain.</p>
+      </div>
+      <div class='col-md-1'>
+      </div>
+    <div class='col-md-4'>
+      <img src='images/bitcoin2.png' width="450" height="300" >
+    </div>
+    </div>
+    </div>
+  </h2>
+  <br>
+  <h2>
+    DARKSIDE
+    <br>
+    <div class='row'>
+    <div class='col-md-5'>
+      <hr>
+    </div>
+    <div class='col-md-2'>
+    <i class="fa fa-user-secret" style="font-size:40px;color:grey;"></i>
+    </div>
+    <div class='col-md-5'>
+      <hr>
+    </div>
+    </div>
+    <div class='row'>
+    <div class='col-md-4'>
+      <img src='images/dark4.png' width="450" height="350" >
+    </div>
+    <div class='col-md-1'>
+    </div>
+    <div class='col-md-6'>
+      <br>
+      <p>A blockchain is a data structure that makes it possible to create a digital ledger of transactions and share it among a distributed network of computers.</p>
+      <p>It uses cryptography to allow each participant on the network to manipulate the ledger in a secure way without the need for a central authority. Once a block of data is recorded on the blockchain ledger, it is extremely difficult to change or remove.</p>
+      <p> When someone wants to add to it, participants in the network - all of which have copies of the existing blockchain - run algorithms to evaluate and verify the proposed transaction. If a majority of nodes agree that the transaction looks valid - that is, identifying information matches the blockchain's history - then the new transaction will be approved and a new block added to the chain.</p>
+    </div>
+    <div class='col-md-1'>
+    </div>
+    </div>
+    </div>
+  </h2>
+
 </body>
 </html>
