--- a/Website/bootstrap/index.html
+++ b/Website/bootstrap/index.html
@@ -10,9 +10,9 @@
   <div class="top_bar">
     <br>
     <ul class = "top_nav">
-      <li class="ico"><a href="#"><i class="fa fa-link" style="font-size:30px;color:black;"></i></a></li>
-      <li class="ico"><a href="#"><i class="fa fa-envelope" style="font-size:30px;color:black;"></i></a></li>
-      <li class="ico"><a href="#"><i class="fa fa-navicon" style="font-size:30px;color:black;"></i></a></li>
+      <li><a href="#links"><i class="fa fa-link" style="font-size:30px;color:black;"></i></a></li>
+      <li><a href="#contact"><i class="fa fa-envelope" style="font-size:30px;color:black;"></i></a></li>
+      <li><a href="#"><i class="fa fa-navicon" style="font-size:30px;color:black;"></i></a></li>
     </ul>
   </div>
   <header>
@@ -53,7 +53,7 @@
         <br>
       </div>
   </header>
-
+<section id="blockc">
   <h2>
     BLOCKCHAIN TECHNOLOGY
     <br>
@@ -85,7 +85,9 @@
     </div>
     </div>
   </h2>
+</section>
   <br>
+  <section id="crypto">
   <h2>
     CRYPTOCYRRENCY
     <br>
@@ -117,7 +119,9 @@
     </div>
     </div>
   </h2>
+</section>
   <br>
+  <section id="darkside">
   <h2>
     DARKSIDE
     <br>
@@ -149,6 +153,61 @@
     </div>
     </div>
   </h2>
-
+</section>
+<section id="links">
+<h2>
+  LINKS
+  <br>
+  <div class='row'>
+  <div class='col-md-5'>
+    <hr>
+  </div>
+  <div class='col-md-2'>
+  <i class="fa fa-link" style="font-size:40px;color:grey;"></i>
+  </div>
+  <div class='col-md-5'>
+    <hr>
+  </div>
+  </div>
+  <div class='links'>
+    <br>
+    <ul>
+      <li><a href="https://www.thoughtworks.com/insights/blog/blockchain-grown-ups-cutting-through-hype">ThoughWorks: "Blockchain for Grown Ups: Cutting Through the Hype" by Prasanna Pendse and Ross Pettit</a></li>
+      <li><a href="https://www.thoughtworks.com/insights/blog/blockchain-for-grown-ups-part-two?utm_campaign=financial-services&utm_medium=social&utm_source=linkedin">ThoughWorks: "Blockchain for Grown Ups Part 2: What is Real?" by Prasanna Pendse and Ross Pettit</a></li>
+    </ul>
+  </div>
+  </h2>
+</section>
+<section id="contact">
+<h2>
+  <br>
+  <br>
+  <br>
+  CONTACT US
+  <br>
+  <div class='row'>
+  <div class='col-md-5'>
+    <hr>
+  </div>
+  <div class='col-md-2'>
+  <i class="fa fa-envelope" style="font-size:40px;color:grey;"></i>
+  </div>
+  <div class='col-md-5'>
+    <hr>
+  </div>
+  </div>
+  <div class='contact'>
+    <br>
+    <form role='form'>
+      <input type="text" placeholder="your name" >
+      <input type="text" placeholder="email" >
+      <input type="text" placeholder="your text" >
+      <button class='btn btn-success'>Send</button>
+    </form>
+  </div>
+  </h2>
+</section>
+<br>
+<br>
 </body>
 </html>
