--- a/Website/bootstrap/index.html
+++ b/Website/bootstrap/index.html
@@ -172,8 +172,37 @@
   <div class='links'>
     <br>
     <ul>
-      <li><a href="https://www.thoughtworks.com/insights/blog/blockchain-grown-ups-cutting-through-hype">ThoughWorks: "Blockchain for Grown Ups: Cutting Through the Hype" by Prasanna Pendse and Ross Pettit</a></li>
-      <li><a href="https://www.thoughtworks.com/insights/blog/blockchain-for-grown-ups-part-two?utm_campaign=financial-services&utm_medium=social&utm_source=linkedin">ThoughWorks: "Blockchain for Grown Ups Part 2: What is Real?" by Prasanna Pendse and Ross Pettit</a></li>
+      <div class='row'>
+      <li>
+        <div class='col-md-1'>
+          <i class="fa fa-pencil" style="font-size:20px;color:grey;"></i>
+        </div>
+        <div class='col-md-10'>
+        <a href="https://www.thoughtworks.com/insights/blog/blockchain-grown-ups-cutting-through-hype">ThoughWorks: "Blockchain for Grown Ups: Cutting Through the Hype" by Prasanna Pendse and Ross Pettit</a>
+        </div>
+        </div>
+      </li>
+      <div class='row'>
+      <li>
+        <div class='col-md-1'>
+          <i class="fa fa-pencil" style="font-size:20px;color:grey;"></i>
+        </div>
+        <div class='col-md-10'>
+        <a href="https://www.thoughtworks.com/insights/blog/blockchain-for-grown-ups-part-two?utm_campaign=financial-services&utm_medium=social&utm_source=linkedin">ThoughWorks: "Blockchain for Grown Ups Part 2: What is Real?" by Prasanna Pendse and Ross Pettit</a>
+        </div>
+        </div>
+      </li>
+    </li>
+    <div class='row'>
+    <li>
+      <div class='col-md-1'>
+        <i class="fa fa-film" style="font-size:20px;color:grey;"></i>
+      </div>
+      <div class='col-md-10'>
+      <a href="https://www.youtube.com/watch?v=Fv0ETVEZil0">LedgerWallet: "The Bitcoin Phenomenon"</a>
+      </div>
+      </div>
+    </li>
     </ul>
   </div>
   </h2>
