--- a/Website/bootstrap/index.html
+++ b/Website/bootstrap/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
   <div class="top_bar">
-    <br>
     <ul class = "top_nav">
-      <li><a href="#links"><i class="fa fa-link" style="font-size:30px;color:black;"></i></a></li>
-      <li><a href="#contact"><i class="fa fa-envelope" style="font-size:30px;color:black;"></i></a></li>
-      <li><a href="#"><i class="fa fa-navicon" style="font-size:30px;color:black;"></i></a></li>
+      <li><a href="#links"><i class="fa fa-link icon1" style="font-size:30px;color:black;"></i></a></li>
+      <li><a href="#contact"><i class="fa fa-envelope icon1" style="font-size:30px;color:black;"></i></a></li>
+      <li><a href="#"><i class="fa fa-navicon icon1" style="font-size:30px;color:black;"></i></a></li>
     </ul>
   </div>
   <header>
@@ -28,27 +27,27 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <ul>
-        <li class="ico"><a href="#"><i class="fa fa-facebook-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
-        <li class="ico"><a href="#"><i class="fa fa-linkedin-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
-        <li class="ico"><a href="#"><i class="fa fa-twitter-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
-        <li class="ico"><a href="#"><i class="fa fa-youtube-square" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-facebook-square icon" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-linkedin-square icon" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-twitter-square icon" style="font-size:48px;color:#FFFFFF;"></i></a></li>
+        <li class="ico"><a href="#"><i class="fa fa-youtube-square icon" style="font-size:48px;color:#FFFFFF;"></i></a></li>
         </ul>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
       </div>
@@ -107,9 +106,9 @@
       </div>
       <div class='col-md-6'>
         <br>
-        <p>A blockchain is a data structure that makes it possible to create a digital ledger of transactions and share it among a distributed network of computers.</p>
-        <p>It uses cryptography to allow each participant on the network to manipulate the ledger in a secure way without the need for a central authority. Once a block of data is recorded on the blockchain ledger, it is extremely difficult to change or remove.</p>
-        <p> When someone wants to add to it, participants in the network - all of which have copies of the existing blockchain - run algorithms to evaluate and verify the proposed transaction. If a majority of nodes agree that the transaction looks valid - that is, identifying information matches the blockchain's history - then the new transaction will be approved and a new block added to the chain.</p>
+        <p>A digital or virtual currency that uses cryptography for security. A cryptocurrency is difficult to counterfeit because of this security feature. A defining feature of a cryptocurrency is that it is not issued by any central authority, rendering it theoretically immune to government interference or manipulation.</p>
+        <p>The first cryptocurrency to capture the public imagination was Bitcoin, which was launched in 2009. Bitcoin's success has spawned a number of competing cryptocurrencies such as Litecoin, Namecoin and PPCoin.</p>
+        <p> Cryptocurrencies make it easier to transfer funds between two parties in transactions; these transfers are facilitated through the use of public and private keys for security purposes. These fund transfers are done with minimal processing fees, enabling users to avoid the steep fees charged by most banks and financial institutions for wire transfers.</p>
       </div>
       <div class='col-md-1'>
       </div>
@@ -144,9 +143,9 @@
     </div>
     <div class='col-md-6'>
       <br>
-      <p>A blockchain is a data structure that makes it possible to create a digital ledger of transactions and share it among a distributed network of computers.</p>
-      <p>It uses cryptography to allow each participant on the network to manipulate the ledger in a secure way without the need for a central authority. Once a block of data is recorded on the blockchain ledger, it is extremely difficult to change or remove.</p>
-      <p> When someone wants to add to it, participants in the network - all of which have copies of the existing blockchain - run algorithms to evaluate and verify the proposed transaction. If a majority of nodes agree that the transaction looks valid - that is, identifying information matches the blockchain's history - then the new transaction will be approved and a new block added to the chain.</p>
+      <p>The anonymous nature of blockchain transactions makes them well-suited for a host of nefarious activities such as money laundering and tax evasion.</p>
+      <p>Bitcoin has been the lubricant that allowed these activities to flourish and up until early 2013 was probably half of all Bitcoin transactions. Even so - Bitcoin has now grown out of its dark phase and with talk of regulation and greenlisting, is maturing beyond the darker regions of the internet as the majority of transactions are taking place on generic standard web platforms.</p>
+      <p>But as Bitcoin has moved to clean itself under the regulators eyes - other crypto currencies such as CloakCoin and Dark Coin (now called Dash) have stepped in to the fold to inject further anonymity into their own crypto currencies and try to usurp the black market mantle.</p>
     </div>
     <div class='col-md-1'>
     </div>
@@ -177,7 +176,7 @@
         <div class='col-md-1'>
           <i class="fa fa-pencil" style="font-size:20px;color:grey;"></i>
         </div>
-        <div class='col-md-10'>
+        <div class='col-md-10 links_text'>
         <a href="https://www.thoughtworks.com/insights/blog/blockchain-grown-ups-cutting-through-hype">ThoughWorks: "Blockchain for Grown Ups: Cutting Through the Hype" by Prasanna Pendse and Ross Pettit</a>
         </div>
         </div>
@@ -187,7 +186,7 @@
         <div class='col-md-1'>
           <i class="fa fa-pencil" style="font-size:20px;color:grey;"></i>
         </div>
-        <div class='col-md-10'>
+        <div class='col-md-10 links_text'>
         <a href="https://www.thoughtworks.com/insights/blog/blockchain-for-grown-ups-part-two?utm_campaign=financial-services&utm_medium=social&utm_source=linkedin">ThoughWorks: "Blockchain for Grown Ups Part 2: What is Real?" by Prasanna Pendse and Ross Pettit</a>
         </div>
         </div>
@@ -198,7 +197,7 @@
       <div class='col-md-1'>
         <i class="fa fa-film" style="font-size:20px;color:grey;"></i>
       </div>
-      <div class='col-md-10'>
+      <div class='col-md-10 links_text'>
       <a href="https://www.youtube.com/watch?v=Fv0ETVEZil0">LedgerWallet: "The Bitcoin Phenomenon"</a>
       </div>
       </div>
@@ -209,8 +208,7 @@
 </section>
 <section id="contact">
 <h2>
-  <br>
-  <br>
+
   <br>
   CONTACT US
   <br>
@@ -227,11 +225,13 @@
   </div>
   <div class='contact'>
     <br>
+    <br>
+    <br>
     <form role='form'>
-      <input type="text" placeholder="your name" >
-      <input type="text" placeholder="email" >
-      <input type="text" placeholder="your text" >
-      <button class='btn btn-success'>Send</button>
+      <input type="text" class = "input_form" placeholder="Your Name" >
+      <input type="text" class = "input_form" placeholder="Email" >
+      <input type="text" class = "input_form" placeholder="Your Text" >
+      <button>Send</button>
     </form>
   </div>
   </h2>
